--- a/embed/file.html
+++ b/embed/file.html
@@ -46,7 +46,7 @@
 </div>
 {{- end }}
 {{- if eq (index $.PostRedirectGet "from") "file" }}
-<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+<div role='alert' class='alert mv2 pa2 br2 flex items-start'>
   <div>
     {{- if eq (head $.FilePath) "pages" }}
     <div>saved page</div>
