--- a/embed/post.html
+++ b/embed/post.html
@@ -1,5 +1,5 @@
 <style>
-html { max-width: 70ch; padding: 3em 1em; margin: auto; line-height: 1.75; font-size: 1.25em; background-color: #fafafa; }
+html { max-width: 80ch; padding: 3em 1em; margin: auto; line-height: 1.75; font-size: 1.25em; background-color: #fafafa; }
 p, ul, ol { margin-bottom: 2em; color: #1d1d1d; font-family: sans-serif; }
 </style>
 <title>{{ if $.Title }}{{ $.Title }}{{ else }}Untitled{{ end }}</title>
@@ -11,11 +11,12 @@ p, ul, ol { margin-bottom: 2em; color: #1d1d1d; font-family: sans-serif; }
 <hr>
 <div style='font-size: 0.875rem; color: #555555;'>{{ $.CreationTime.Format "2006-01-02" }}</div>
 {{ $.Content }}
-<ul style='display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 0.25fr)); grid-gap: 2rem; margin: 0; padding: 0; list-style: none;'>
+<ul style='display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 0.25fr)); grid-gap: 0.5rem; margin: 0; padding: 0; list-style: none;'>
   {{- range $image := $.Images }}
   <li>
-    <figure style='height: 100%;'>
-      <img src='{{ $image.Name }}' style='width: 100%; height: 100%; object-fit: cover;' loading='lazy'>
+    <figure style='margin: 0; padding: 0;'>
+      <img src='{{ $image.Name }}' style='max-height: 100%; max-width: 100%; object-fit: cover;' loading='lazy'>
+      <figcaption style='white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 0.875rem;'><a href='/{{ join $image.Parent $image.Name }}'>{{ $image.Name }}</a></figcaption>
     </figure>
   </li>
   {{- end }}
