--- a/embed/search.html
+++ b/embed/search.html
@@ -46,6 +46,8 @@
       <label for='ext.md' class='mr3 pointer'>.md</label>
       <input id='ext.txt' type='checkbox' name='ext' value='.txt' class='pointer'{{ if hasExt ".txt" }} checked{{ end }}>
       <label for='ext.txt' class='mr3 pointer'>.txt</label>
+      <input id='ext.json' type='checkbox' name='ext' value='.json' class='pointer'{{ if hasExt ".json" }} checked{{ end }}>
+      <label for='ext.json' class='mr3 pointer'>.json</label>
     </div>
   </div>
   <button type='submit' class='button ba br2 pa2 mv3 w-100'>search</button>
