--- a/embed/rootdirectory.html
+++ b/embed/rootdirectory.html
@@ -234,6 +234,22 @@
         </div>
       </details>
     </li>
+    {{- else if eq $file.Name "site.json" }}
+    <li class='flex flex-wrap items-center bb pv2'>
+      <a href='/{{ join "files" $.SitePrefix "site.json" }}/'>site.json</a>
+      <div class='flex-grow-1'></div>
+      <details class='relative' data-autoclose-details>
+        <summary role='button' class='flex items-center button ba br2 b--black h2 hide-marker ph1 pointer' data-disable-click-selection>
+          {{ template "heroicons-question-mark-circle" }}
+          {{ template "octicons-triangle-down" }}
+        </summary>
+        <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+          <div class='ma2' style='min-width: 10rem;'>
+            Configures your site settings.
+          </div>
+        </div>
+      </details>
+    </li>
     {{- end }}
   {{- end }}
 </ul>
